Task 02 and 03 refactoring

--- a/cwp-02/jquery.html
+++ b/cwp-02/jquery.html
@@ -16,7 +16,7 @@
                     success: function (data, status, xhr) {
                         $("#FIO").append(data.firstname + ' ' + data.lastname + ' ' + data.patronymic);
                     },
-                    error: function (jqXhr, textStatus, errorMessage) { // error callback 
+                    error: function (jqXhr, textStatus, errorMessage) {
                         $("#FIO").append('Error: ' + errorMessage);
                     }
                 });
